# ai-chat-multiplexer

./: .gitignore  AI_Chat_Multiplexer.md  AI_Chat_Multiplexer_Ý_Tưởng.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vitest.config.ts
.claude/: settings.json
public/: newtab.html
scripts/: gen-icon-source.mjs
src/: App.css  App.test.tsx  App.tsx  AppHeader.test.tsx  AppOverlays.test.tsx  DownloadToastStack.test.tsx  DownloadsPanel.test.tsx  Icons.test.tsx  Icons.tsx  Modals.test.tsx  Pane.drag.test.tsx  Pane.test.tsx  PaneGrid.test.tsx  SettingsModal.test.tsx  WorkspaceSwitcher.test.tsx  appCore.test.ts  appCore.ts  main.test.tsx  newtab.test.ts  newtab.ts  test-utils.test.ts  test-utils.ts  useAppPersistence.test.ts  useBackupAndUpdates.importReject.test.ts  useBackupAndUpdates.test.ts  useDerivedWorkspaceState.test.ts  useDownloadManager.test.ts  useDragState.test.ts  useFocusedPaneCleanup.test.ts  useMenuStates.test.ts  useNativeTabStatus.test.ts  useNativeWebviews.test.ts  usePaneActions.test.ts  useProfileWorkspaceActions.test.ts  usePromptDialogs.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppHeader.tsx  AppOverlays.tsx  DownloadToastStack.tsx  DownloadsPanel.tsx  Modals.tsx  Pane.tsx  PaneGrid.tsx  SettingsModal.tsx  WorkspaceSwitcher.tsx
src/hooks/: useAppPersistence.ts  useBackupAndUpdates.ts  useDerivedWorkspaceState.ts  useDownloadManager.ts  useDragState.ts  useFocusedPaneCleanup.ts  useMenuStates.ts  (+5 more)
(+1 files in other folders)
